--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
               <div class="text">
 
                 <h3 class="font-weight-light"><a href="the_dark_knight.html"><strong>The Dark Knight</strong></a></h3>
-                <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Tasnim Fariha <span class="sep">/</span> 16 September 2017 <span class="sep">/</span> 1:30:20</small></span></div>
+                <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Movie Release date<span class="sep">/</span> 16 September 2017 <span class="sep">/</span> 1:30:20</small></span></div>
 
 
                 <div class="player">
@@ -348,7 +348,7 @@
                 <div class="text">
 
                   <h3 class="font-weight-light"><a href="joker.html"><strong>Joker </strong></a></h3>
-                  <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Tasnim Fariha <span class="sep">/</span> 13 july 2020 <span class="sep">/</span> 1:30:20</small></span></div>
+                  <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Movie Release date <span class="sep">/</span> 13 july 2020 <span class="sep">/</span> 1:30:20</small></span></div>
 
                   <div class="player">
                  <!---   <audio id="player2" preload="none" controls style="max-width: 100%">
@@ -382,7 +382,7 @@
                     <div class="text">
 
                       <h3 class="font-weight-light"><a href="inception.html"><strong>Inception</strong></a></h3>
-                      <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Tasnim Fariha  <span class="sep">/</span> 16 September 2017 <span class="sep">/</span> 1:30:20</small></span></div>
+                      <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Movie Release date  <span class="sep">/</span> 16 September 2017 <span class="sep">/</span> 1:30:20</small></span></div>
 
 
                       <div class="player">
@@ -399,7 +399,7 @@
                       <div class="text">
 
                         <h3 class="font-weight-light"><a href="spiderman_into_the_spider_verse.html"><strong>Spiderman Into The Spider-Verse</strong></a></h3>
-                        <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Tasnim Fariha <span class="sep">/</span> 16 September 2017 <span class="sep">/</span> 1:30:20</small></span></div>
+                        <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Movie Release date <span class="sep">/</span> 16 September 2017 <span class="sep">/</span> 1:30:20</small></span></div>
 
 
                         <div class="player">
