--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <div class="text">
 
                   <h3 class="font-weight-light"><a href="joker.html"><strong>Joker </strong></a></h3>
-                  <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Movie Release date <span class="sep">/</span> 13 july 2020 <span class="sep">/</span> 1:30:20</small></span></div>
+                  <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Movie Release Date <span class="sep">/</span> 13 july 2020 <span class="sep">/</span> 1:30:20</small></span></div>
 
                   <div class="player">
                  <!---   <audio id="player2" preload="none" controls style="max-width: 100%">
