--- a/index.html
+++ b/index.html
@@ -365,7 +365,14 @@
                   <div class="text">
 
                     <h3 class="font-weight-light"><a href="me_before_you.html"><strong>Me Before You</strong> </a></h3>
-                    <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Tasnim Fariha <span class="sep">/</span> 16 September 2017 <span class="sep">/</span> 1:30:20</small></span></div>
+                    <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Movie Release date <span class="sep">/</span> 16 September 2017 <span class="sep">/</span> 1:30:20</small></span>
+                    <span class="fa fa-star checked" style="font-size: 10px;"></span>
+                    <span class="fa fa-star checked" style="font-size: 10px;"></span>
+                    <span class="fa fa-star checked" style="font-size: 10px;"></span>
+                    <span class="fa fa-star checked" style="font-size: 10px;"></span>
+                    <span class="fa fa-star-half-full half-checked" style="font-size: 10px;"></span>
+                    
+                    </div>
 
 
                     <div class="player">
