--- a/Thriller.html
+++ b/Thriller.html
@@ -117,9 +117,9 @@
                      <div class="text">
 
                         <h3 class="font-weight-light"><a href="black_swan.html"><strong>Black Swan</strong></a></h3>
-                        <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Tasnim Fariha <span
+                        <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Movie release Date <span
                                     class="sep">/</span>
-                                 16 September 2020 <span class="sep">/</span> 1:30:20</small></span></div>
+                                 16 September 2020 <span class="sep"></span> </small></span></div>
 
 
                         <div class="player">
@@ -134,9 +134,9 @@
                      <div class="text">
 
                         <h3 class="font-weight-light"><a href="shutter_island.html"><strong>Shutter Island</strong></a></h3>
-                        <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Tasnim Fariha <span
+                        <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Movie Release Date <span
                                     class="sep">/</span>
-                                 13 July 2020 <span class="sep">/</span> 1:30:20</small></span></div>
+                                 13 July 2020 <span class="sep"></span></small></span></div>
 
 
                         <div class="player">
@@ -150,9 +150,9 @@
                      <div class="text">
 
                         <h3 class="font-weight-light"><a href="v_for_vendetta.html"><strong>V For Vendetta</strong></a></h3>
-                        <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Tasnim Fariha <span
+                        <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Movie Release date <span
                                     class="sep">/</span>
-                                 16 June 2020 <span class="sep">/</span> 1:30:20</small></span></div>
+                                 16 June 2020 <span class="sep"></span> </small></span></div>
 
 
                         <div class="player">
@@ -169,9 +169,9 @@
                      <div class="text">
 
                         <h3 class="font-weight-light"><a href="joker.html"><strong>Joker</strong></a></h3>
-                        <div class="text-white mb-3"><span class="text-black-opacity-05"><small>By Tasnim Fariha <span
+                        <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Movie Release date <span
                                     class="sep">/</span>
-                                 16 April 2020 <span class="sep">/</span> 1:30:20</small></span></div>
+                                 16 April 2020 <span class="sep"></span> </small></span></div>
 
 
                         <div class="player">
